Sketcher: Preferences for setting defining external geometry color

--- a/src/Mod/Sketcher/Gui/SketcherSettingsColors.ui
+++ b/src/Mod/Sketcher/Gui/SketcherSettingsColors.ui
@@ -251,6 +251,39 @@
          </widget>
         </item>
         <item row="7" column="0">
+            <widget class="QLabel" name="label_20">
+                <property name="minimumSize">
+                    <size>
+                        <width>182</width>
+                        <height>0</height>
+                    </size>
+                </property>
+                <property name="text">
+                    <string>Defining External geometry</string>
+                </property>
+            </widget>
+        </item>        
+        <item row="7" column="1">
+            <widget class="Gui::PrefColorButton" name="DefiningExternalColor">
+                <property name="toolTip">
+                    <string>The color of defining external geometry in edit mode</string>
+                </property>
+                <property name="color">
+                    <color>
+                        <red>255</red>
+                        <green>200</green>
+                        <blue>255</blue>
+                    </color>
+                </property>
+                <property name="prefEntry" stdset="0">
+                    <cstring>DefiningExternalColor</cstring>
+                </property>
+                <property name="prefPath" stdset="0">
+                    <cstring>View</cstring>
+                </property>
+            </widget>
+        </item>
+        <item row="8" column="0">
          <widget class="QLabel" name="label_4">
           <property name="minimumSize">
            <size>
@@ -263,7 +296,7 @@
           </property>
          </widget>
         </item>
-        <item row="7" column="1">
+        <item row="8" column="1">
          <widget class="Gui::PrefColorButton" name="FullyConstrainedColor">
           <property name="toolTip">
            <string>The color of fully constrained geometry in edit mode</string>
@@ -283,7 +316,7 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="0">
+        <item row="9" column="0">
          <widget class="QLabel" name="label_14">
           <property name="minimumSize">
            <size>
@@ -296,7 +329,7 @@
           </property>
          </widget>
         </item>
-        <item row="8" column="1">
+        <item row="9" column="1">
          <widget class="Gui::PrefColorButton" name="ConstrainedColor">
           <property name="toolTip">
            <string>The color of driving constraints in edit mode</string>
@@ -316,14 +349,14 @@
           </property>
          </widget>
         </item>
-        <item row="9" column="0">
+        <item row="10" column="0">
          <widget class="QLabel" name="label_8">
           <property name="text">
            <string>Reference Constraint color</string>
           </property>
          </widget>
         </item>
-        <item row="9" column="1">
+        <item row="10" column="1">
          <widget class="Gui::PrefColorButton" name="NonDrivingConstraintColor">
           <property name="toolTip">
            <string>The color of reference constrains and datum in edit mode</string>
@@ -343,14 +376,14 @@
           </property>
          </widget>
         </item>
-        <item row="10" column="0">
+        <item row="11" column="0">
          <widget class="QLabel" name="labelexpr">
           <property name="text">
            <string>Expression dependent constraint color</string>
           </property>
          </widget>
         </item>
-        <item row="10" column="1">
+        <item row="11" column="1">
          <widget class="Gui::PrefColorButton" name="ExprBasedConstrDimColor">
           <property name="toolTip">
            <string>The color of expression dependent datum constraints in edit mode</string>
@@ -370,7 +403,7 @@
           </property>
          </widget>
         </item>
-        <item row="11" column="0">
+        <item row="12" column="0">
          <widget class="QLabel" name="label_15">
           <property name="minimumSize">
            <size>
@@ -383,7 +416,7 @@
           </property>
          </widget>
         </item>
-        <item row="11" column="1">
+        <item row="12" column="1">
          <widget class="Gui::PrefColorButton" name="DatumColor">
           <property name="toolTip">
            <string>The color of the datum portion of a driving constraint</string>
@@ -403,7 +436,7 @@
           </property>
          </widget>
         </item>
-        <item row="12" column="0">
+        <item row="13" column="0">
          <widget class="QLabel" name="label_16">
           <property name="minimumSize">
            <size>
@@ -416,7 +449,7 @@
           </property>
          </widget>
         </item>
-        <item row="12" column="1">
+        <item row="13" column="1">
          <widget class="Gui::PrefSpinBox" name="SketcherDatumWidth">
           <property name="toolTip">
            <string>The default line thickness for new shapes</string>
@@ -438,7 +471,7 @@
           </property>
          </widget>
         </item>
-        <item row="13" column="0">
+        <item row="14" column="0">
          <widget class="QLabel" name="label_12">
           <property name="minimumSize">
            <size>
@@ -451,7 +484,7 @@
           </property>
          </widget>
         </item>
-        <item row="13" column="1">
+        <item row="14" column="1">
          <widget class="Gui::PrefSpinBox" name="DefaultSketcherVertexWidth">
           <property name="toolTip">
            <string>The default line thickness for new shapes</string>
@@ -473,7 +506,7 @@
           </property>
          </widget>
         </item>
-        <item row="14" column="0">
+        <item row="15" column="0">
          <widget class="QLabel" name="label_13">
           <property name="minimumSize">
            <size>
@@ -486,7 +519,7 @@
           </property>
          </widget>
         </item>
-        <item row="14" column="1">
+        <item row="15" column="1">
          <widget class="Gui::PrefSpinBox" name="DefaultSketcherLineWidth">
           <property name="toolTip">
            <string>The default line thickness for new shapes</string>
@@ -508,7 +541,7 @@
           </property>
          </widget>
         </item>
-        <item row="15" column="0">
+        <item row="16" column="0">
          <widget class="QLabel" name="label_5">
           <property name="minimumSize">
            <size>
@@ -521,7 +554,7 @@
           </property>
          </widget>
         </item>
-        <item row="15" column="1">
+        <item row="16" column="1">
          <widget class="Gui::PrefColorButton" name="CursorTextColor">
           <property name="color">
            <color>
@@ -538,7 +571,7 @@
           </property>
          </widget>
         </item>
-        <item row="16" column="0">
+        <item row="17" column="0">
          <widget class="QLabel" name="label_19">
           <property name="minimumSize">
            <size>
@@ -551,7 +584,7 @@
           </property>
          </widget>
         </item>
-        <item row="16" column="1">
+        <item row="17" column="1">
          <widget class="Gui::PrefColorButton" name="CursorCrosshairColor">
           <property name="color">
            <color>
